# yosan

./: .replit  api.py  app.py  database.py  main.py  models.py  pyproject.toml  requirements.text  run.py  start_python_app.py
client/src/: App.tsx  index.css
client/src/components/charts/: budget-progress.tsx
client/src/components/layout/: sidebar.tsx
client/src/components/modals/: add-budget-modal.tsx  add-expense-modal.tsx
client/src/lib/: csv-utils.ts
client/src/pages/: budgets.tsx  dashboard.tsx  data-management.tsx  expenses.tsx  reports.tsx
server/: routes.ts  storage.ts
shared/: schema.ts
