[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.3",
    "xlsxwriter>=3.2.3",
]
